Fix alignment between legend labels and date nav

--- a/indico/modules/rb/client/js/common/timeline/TimelineLegend.module.scss
+++ b/indico/modules/rb/client/js/common/timeline/TimelineLegend.module.scss
@@ -30,6 +30,8 @@
             color: white;
             font-weight: bold;
             border: 1px solid rgba(0, 0, 0, 0.1);
+            padding-top: 0.7em;
+            padding-bottom: 0.7em;
 
             &.compact {
                 padding: 0.5em;
